[metadata]
name = PyInMem
license = private


[flake8]
max-line-length = 88
ignore = E203, W503
exclude =
    .git
    .gitignore
    .vscode
    .idea
    .env
    .venv
    env
    venv
    kernel/settings/*
    **/migrations/*
per-file-ignores =
    */__init__.py: F401
    tests/*: TAE001
    */apps.py: F401

[mypy] 
plugins = mypy_django_plugin.main, mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "kernel.settings.deploy"


[isort]
profile=black
skip = build,.tox,venv
skip_glob=**/migrations
group_by_package=true
known_django=django
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
# length_sort_sections=future,stdlib,django,thirdparty
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88